Removed unused classes and jobs related to availability and salary calculations. Simplified project structure by eliminating redundant code.